--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="/Css/style.css">
+
     <title>HypeModel</title>
 </head>
 <body>
     <header class="header">
         <div class="header__linha1">
-            <p class="logo"></p>
+            <p class="header__logo">Logo</p>
+            <div class="header__itens">
+                <p class="header__item">Home</p>
+                <p class="header__item">About us</p>
+                <p class="header__item">Modelos</p>
+                <p class="header__item">Contato</p>
+            </div>
         </div>
-        <div class="header__linha2"></div>
+        <div class="header__linha2">
+            <p class="header__texto">Texto</p>
+        </div>
 
     </header>
 </body>
