--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="header__linha1">
-            <p class="header__logo">Logo</p>
+            <img class="header__logo" src="/imgs/logoPreto.svg" alt="Logo">
             <div class="header__itens">
                 <p class="header__item">Home</p>
                 <p class="header__item">About us</p>
