--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <header class="header">
         <div class="header__linha1">
-            <img class="header__logo" src="/imgs/logoPreto.svg" alt="Logo">
+            <img class="header__logo" src="Imgs/logoBranco.svg" alt="Logo">
             <div class="header__itens">
                 <p class="header__item">Home</p>
                 <p class="header__item">About us</p>
-                <p class="header__item">Modelos</p>
-                <p class="header__item">Contato</p>
+                <p class="header__item">Models</p>
+                <p class="header__item">Contact</p>
             </div>
         </div>
         <div class="header__linha2">
-            <p class="header__texto">Texto</p>
+            <p class="header__texto">Hype Model</p>
         </div>
 
     </header>
