--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="header__linha1">
             <img class="header__logo" src="Imgs/logoBranco.svg" alt="Logo">
             <div class="header__itens">
-                <p class="header__item">Home</p>
-                <a href="#about">
+                <p class="header__item item__home">Home</p>
+                <a href="#about" class="item__a">
                     <p class="header__item">About us</p>
                 </a>
-                <a href="#models">
+                <a href="#models" class="item__a">
                     <p class="header__item">Models</p>
                 </a>
-                <a href="#contact">
+                <a href="#contact" class="item__a">
                     <p class="header__item">Contact</p>
                 </a>
             </div>
@@ -47,9 +47,10 @@
                 has a history that dates back to 1990. Our journey began with a simple vision: to bring beauty to life
                 uniqueness and the extraordinary potential of talented individuals. With years of experience in the
                 fashion, we have built a dedicated and passionate team ready to launch new talent and support models
-                already established in their careers.</p>
+                already established in their careers.
+            </p>
         </div>
-    </section />
+    </section>
 
 
     <section class="modelos" id="models">
@@ -87,7 +88,6 @@
             <p class="contact__texto">Contact us! We are open from Mon to Fri, from 9:30am to 6:00pm</p>
             <ul class="contact__list">
                 <li class="contact__item">
-                    <!-- <img src="/Imgs/location.png" alt=""> -->
                     <p>&#128205; E Spruce st, 987 - Seattle, Canadá</p>
                 </li>
                 <li class="contact__item">
@@ -99,10 +99,6 @@
             </ul>
         </div>
     </section>
-
-    <!-- <div class="a">
-        <img src="/Imgs/fundo.jpg" alt="">
-    </div> -->
 
     <footer class="footer">
         <p class="footer__p">&copy;Model Hype</p>
