--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="header__itens">
                 <p class="header__item item__home">Home</p>
                 <a href="#about" class="item__a">
-                    <p class="header__item">About us</p>
+                    <p class="header__item item__about">About us</p>
                 </a>
                 <a href="#models" class="item__a">
-                    <p class="header__item">Models</p>
+                    <p class="header__item item__models">Models</p>
                 </a>
                 <a href="#contact" class="item__a">
-                    <p class="header__item">Contact</p>
+                    <p class="header__item item__contact">Contact</p>
                 </a>
             </div>
         </div>
